--- a/barcodescanner/src/main/res/layout/fragment_barcode_reader.xml
+++ b/barcodescanner/src/main/res/layout/fragment_barcode_reader.xml
@@ -7,17 +7,17 @@
     android:background="#00ff00"
     android:orientation="vertical">
 
-    <info.androidhive.barcode.camera.CameraSourcePreview
+    <com.abdllhyalcn.barcodescanner.camera.CameraSourcePreview
         android:id="@+id/preview"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <info.androidhive.barcode.camera.GraphicOverlay
+        <com.abdllhyalcn.barcodescanner.camera.GraphicOverlay
             android:id="@+id/graphicOverlay"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
 
-    </info.androidhive.barcode.camera.CameraSourcePreview>
+    </com.abdllhyalcn.barcodescanner.camera.CameraSourcePreview>
 
 </LinearLayout>
